data/derived/comb/progs/unify/prog6279.ml.out
Characters 16-17:
  let _ = pipe [] 3;;
                  ^
Error: This expression has type int but an expression was expected of type
         'a -> ('a -> 'b) -> 'b
